--- a/app-spec.yaml
+++ b/app-spec.yaml
@@ -5,9 +5,9 @@ functions:
 - github:
     branch: master
     deploy_on_push: true
-    repo: digitalocean/sample-functions-python-jokes
-  name: jokes-api
+    repo: egorsmkv/do-functions-ukr-ner
+  name: ukr-ner-api
   routes:
   - path: /
   source_dir: /
-name: jokes
+name: ukr-ner
